--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -843,35 +843,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "alcohol                           14.37\n",
-       "malic_acid                         1.95\n",
-       "ash                                2.50\n",
-       "alcalinity_of_ash                 16.80\n",
-       "magnesium                        113.00\n",
-       "total_phenols                      3.85\n",
-       "flavanoids                         3.49\n",
-       "nonflavanoid_phenols               0.24\n",
-       "proanthocyanins                    2.18\n",
-       "color_intensity                    7.80\n",
-       "hue                                0.86\n",
-       "od280/od315_of_diluted_wines       3.45\n",
-       "proline                         1480.00\n",
-       "Name: 3, dtype: float64"
+       "{'alcohol': 14.37,\n",
+       " 'malic_acid': 1.95,\n",
+       " 'ash': 2.5,\n",
+       " 'alcalinity_of_ash': 16.8,\n",
+       " 'magnesium': 113.0,\n",
+       " 'total_phenols': 3.85,\n",
+       " 'flavanoids': 3.49,\n",
+       " 'nonflavanoid_phenols': 0.24,\n",
+       " 'proanthocyanins': 2.18,\n",
+       " 'color_intensity': 7.8,\n",
+       " 'hue': 0.86,\n",
+       " 'od280/od315_of_diluted_wines': 3.45,\n",
+       " 'proline': 1480.0}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.iloc[3].to_"
+    "df.iloc[3].to_dict()"
    ]
   },
   {
