automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -907,6 +907,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>alcohol</th>\n",
        "      <th>malic_acid</th>\n",
        "      <th>ash</th>\n",
        "    </tr>\n",
@@ -914,16 +915,19 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>14.20</td>\n",
        "      <td>1.76</td>\n",
        "      <td>2.45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>14.39</td>\n",
        "      <td>1.87</td>\n",
        "      <td>2.45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
+       "      <td>14.06</td>\n",
        "      <td>2.15</td>\n",
        "      <td>2.61</td>\n",
        "    </tr>\n",
@@ -932,19 +936,19 @@
        "</div>"
       ],
       "text/plain": [
-       "   malic_acid   ash\n",
-       "5        1.76  2.45\n",
-       "6        1.87  2.45\n",
-       "7        2.15  2.61"
+       "   alcohol  malic_acid   ash\n",
+       "5    14.20        1.76  2.45\n",
+       "6    14.39        1.87  2.45\n",
+       "7    14.06        2.15  2.61"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.iloc[5:8, 1:3]"
+    "df.iloc[5:8, 0:3]"
    ]
   },
   {
