automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -2881,7 +2881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2896,16 +2896,17 @@
        "13     91.0\n",
        "14    102.0\n",
        "15    112.0\n",
+       "16    120.0\n",
        "Name: magnesium, dtype: float64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.[7:16,\"magnesium\"]"
+    "df.loc[7:16,\"magnesium\"]"
    ]
   },
   {
