automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -3062,7 +3062,7 @@
     }
    ],
    "source": [
-    "df.loc[df[\"alcohol\"]<12, ['color_intensity']]"
+    "df.color_intensity[df[\"alcohol\"]<12, ['color_intensity']]"
    ]
   },
   {
