automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3388,7 +3388,7 @@
    "source": [
     "df.loc[df[\"color_intensity\"]>7, \"shade\"] = \"dark\"\n",
     "df.loc[df[\"color_intensity\"]<=7, \"shade\"] = \"light\"\n",
-    "df.iloc"
+    "df.iloc[:3]"
    ]
   },
   {
