--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -3371,7 +3371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -3415,6 +3415,26 @@
        "      <td>1185.0</td>\n",
        "      <td>light</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1480.0</td>\n",
+       "      <td>dark</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>735.0</td>\n",
+       "      <td>light</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1450.0</td>\n",
+       "      <td>light</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1290.0</td>\n",
+       "      <td>light</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -3423,10 +3443,14 @@
        "   proline  shade\n",
        "0   1065.0  light\n",
        "1   1050.0  light\n",
-       "2   1185.0  light"
+       "2   1185.0  light\n",
+       "3   1480.0   dark\n",
+       "4    735.0  light\n",
+       "5   1450.0  light\n",
+       "6   1290.0  light"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3434,7 +3458,7 @@
    "source": [
     "df.loc[df[\"color_intensity\"]>7, \"shade\"] = \"dark\"\n",
     "df.loc[df[\"color_intensity\"]<=7, \"shade\"] = \"light\"\n",
-    "df.iloc[:3, 12:15]"
+    "df.iloc[:7, 12:15]"
    ]
   },
   {
